# skyproject

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  install.sh  pyproject.toml  requirements.txt  run.py
skyproject/: __init__.py  cli.py
skyproject/core/: __init__.py  bootstrap.py  code_index.py  communication.py  config.py  feedback_analysis.py  improvement_tracker.py  ml_insights.py  orchestrator.py  self_improvement.py  task_store.py  test_communication.py  test_feedback_analysis.py  test_ml_insights.py  test_self_improvement.py  test_task_store.py
skyproject/irgat_ai/: __init__.py  anomaly_detector.py  coder.py  exceptions.py  executor.py  irgat_agent.py  self_improve.py  test_coder.py  test_executor.py  tester.py
skyproject/pm_ai/: __init__.py  common.py  ml_insights.py  planner.py  pm_agent.py  prioritizer.py  reviewer.py  self_improve.py  task_dependency_visualizer.py  test_logging.py  test_planner.py  test_prioritizer.py  test_reviewer.py  test_self_improve.py  test_task_dependency_visualizer.py  test_task_prioritizer.py
skyproject/shared/: __init__.py  api.py  code_chunker.py  device_registration.py  file_ops.py  llm_client.py  logging_utils.py  models.py  notifications.py  prompt_generation.py  test_llm_client.py  test_notifications.py  test_prompt_generation.py  vector_store.py
skyproject/telegram/: __init__.py  bot.py  handlers.py
skyproject/tests/: test_pm_ai_self_improve.py  test_prioritizer.py  test_task_store.py
skyproject/web/: __init__.py  app.py  auth.py
skyproject/web/routes/: api_keys.py  config.py  dashboard.py  logs.py  tasks.py
skyproject/web/static/: app.js  style.css
skyproject/web/templates/: api_keys.html  base.html  config.html  dashboard.html  login.html  logs.html  task_detail.html  tasks.html
tests/: test_communication.py  test_device_registration.py  test_notifications.py  test_reviewer.py  test_task_store.py  test_tester.py
